removed console.log and fixed the issue of the text not showing in the label for quotation page

--- a/src/app/_Common/_Quotation/TabSection/TabSec.css
+++ b/src/app/_Common/_Quotation/TabSection/TabSec.css
@@ -97,3 +97,7 @@ select {
     padding: 5px;
     margin-left: 10px;
 }
+
+.quotation-label{
+    color: black;
+}
